--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   },
   "homepage": "https://github.com/AnastasiaYazvinskaya/cse341-sp24-Project2#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-openid-connect": "^2.17.1",
+    "express-validator": "^7.1.0",
+    "http-errors": "^2.0.0",
     "mongodb": "^6.6.2",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.1"
   }
 }
